After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770273 - gstyle: Fix the build on 32 bit architectures
gstyle: Fix the build on 32 bit architectures
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-08-23 11:25 UTC by Kalev Lember
Modified: 2016-08-23 11:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gstyle: Fix the build on 32 bit architectures (912 bytes, patch)
2016-08-23 11:25 UTC, Kalev Lember
committed Details | Review

Description Kalev Lember 2016-08-23 11:25:29 UTC
.
Comment 1 Kalev Lember 2016-08-23 11:25:51 UTC
Created attachment 333998 [details] [review]
gstyle: Fix the build on 32 bit architectures
Comment 2 sébastien lafargue 2016-08-23 11:43:32 UTC
Review of attachment 333998 [details] [review]:

LGTM
Comment 3 Kalev Lember 2016-08-23 11:46:11 UTC
Attachment 333998 [details] pushed as caa4648 - gstyle: Fix the build on 32 bit architectures