gstyle: Fix the build on 32 bit architectures

https://bugzilla.gnome.org/show_bug.cgi?id=770273